# cheez-api

./: .env  Cargo.toml  Procfile  README.md  diesel.toml  heroku.yml
migrations/2024-06-23-193242_create_restaurants/: down.sql  up.sql
migrations/2024-06-23-193242_create_users/: down.sql  up.sql
migrations/2024-06-23-193353_create_restaurants/: down.sql  up.sql
migrations/2024-06-23-193353_create_users/: up.sql
migrations/2024-07-07-101436_create_menu/: up.sql
migrations/2024-07-07-103934_create_items/: up.sql
migrations/2024-07-07-103934_create_menu/: down.sql  up.sql
migrations/2024-07-07-104234_create_items/: down.sql  up.sql
migrations/2024-07-07-104234_create_reviews/: up.sql
migrations/2024-07-07-122623_create_reviews/: down.sql  up.sql
rest/: auth.http  restaurant.http
src/: db_conn.rs  lib.rs  main.rs  schema.rs
src/handlers/: auth.rs  item.rs  menu.rs  mod.rs  restaurant.rs  user.rs
src/middlewares/: auth.rs
src/models/: item.rs  menu.rs  mod.rs  restaurant.rs  user.rs
src/routes/: auth.rs  menu.rs  mod.rs  restaurant.rs  user.rs
src/seeder/: seed.rs
src/services/: auth.rs  mod.rs  restaurant.rs  user.rs
