[package]
name = "cheez-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
argon2 = "0.5.3"
diesel = { version = "2.2.0", features = ["postgres", "uuid"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = "4.2.3"
utoipa-swagger-ui = { version="7.1.0", features = ["actix-web"] }
uuid = { version= "1.9.1", features = ["v4", "serde"] }

