[package]
name = "cheez-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
argon2 = "0.5.3"
diesel = { version = "2.2.0", features = [
    "postgres",
    "uuid",
    "r2d2",
    "chrono",
] }
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15.1"
fakeit = "1.3.0"
actix-cors = "0.7.0"
diesel-derive-newtype = "2.1.2"
geo = "0.28.0"
geo-types = "0.7.13"
r2d2 = "0.8.10"


[[bin]]
name = "seed"
path = "src/seeder/seed.rs"

[[bin]]
name = "main"
path = "src/main.rs"
